# nova-team

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  app.py  config.example.yaml  pyproject.toml
docs/: AGENTS_AUTOMATION_DESIGN.md  AGENT_PROCESS_DESIGN.md  DATABASE_CONNECTION_POOL_FIX.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  P0_FIXES_SUMMARY.md  PLAN.md  PRD.md  PROCESS_IMPLEMENTATION_SUMMARY.md  SPEC.md  WHITEPAPER.md  integration-plan.md
nova_platform/: __init__.py  cli.py  config.py  database.py  models.py  star_office.py
nova_platform/agents/: __init__.py  base.py  factory.py  implementations.py
nova_platform/migrations/: __init__.py  add_automation_models.py  add_project_member_role.py  add_project_workspace.py  add_todo_process_fields.py
nova_platform/services/: __init__.py  agent_process_service.py  agent_service.py  agent_session_service.py  automation_service.py  decision_engine.py  employee_service.py  human_interaction_service.py  knowledge_service.py  leader_lock_service.py  mailbox_service.py  monitor_service.py  okr_service.py  project_control_service.py  project_log_service.py  project_member_service.py  project_service.py  task_dependency_service.py  task_state_service.py  todo_service.py  wbs_service.py
nova_platform/utils/: __init__.py  (+1 more)
scripts/: README_P0_FIXES.md  install-service.sh  migrate_add_p0_fixes.py  migrate_add_work_summary.py  nova-dispatch.py  test_p0_fixes.py  verify_p0_fixes.py
templates/: dashboard.html  index.html  kanban.html
tests/: __init__.py  conftest.py  test_cli.py  test_todos.py
(+3 files in other folders)
