[project]
name = "nova-platform"
version = "0.1.0"
description = "AI collaboration platform - manage projects, employees, todos, and knowledge"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
nova = "nova_platform.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nova_platform*"]
